--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -124,7 +124,7 @@ body, ul, li, h1, h2, a{
     border: 4px solid white;
   }
   form input:focus{
-    border: 4px dashed #4B4B4B;
+    border: 4px solid #4B4B4B;
     outline: none;
   }
   form input:valid{
@@ -135,5 +135,59 @@ body, ul, li, h1, h2, a{
     color: white;
     padding: 10px;
     text-align: center;
+  }
+  @media screen and (max-width: 1400px){
+    .banner .welcome h2{
+     font-size: 60px;
+    }
+    nav li{
+      font-size: 18px;
+    }
+
+  }
+  @media screen and (max-width: 960px){
+    .banner .welcome h2{
+     font-size: 40px;
+    }
+    nav li{
+      font-size: 18px;
+    }
+    
+  }
+  @media screen and (max-width: 700px){
+    .banner .welcome{
+     position: relative;
+     text-align: center;
+     padding: 10px;
+    }
+    .banner .welcome br{
+      display: none;
+    }
+    .banner .welcome h2{
+      font-size: 25px;
+    }
+    .banner .welcome span{
+      font-size: 1em;
+    }
+    .images li{
+      width: 100%;
+      margin:20px auto;
+      display: block;
+      
+    }
+  }
+  @media screen and (max-width: 560px){
+   nav li{
+    font-size: 20px;
+    display: block;
+    margin: 20px auto;
+    align-items: center;
+   }
+   header{
+    position:relative;
+   }
+    .main-nav{
+      top: 0px;
+    }
   }
   
